force-app/main/default/objects/User_Story__c/fields/Additional_Configuration_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Configuration_Needed__c</fullName>
    <label>Additional Configuration Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>