force-app/main/default/objects/User_Story__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <inlineHelpText>TBD how this field will be used, likely for design approvals</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending EDF Stakeholder Review</fullName>
            </value>
            <value>
                <fullName>Ready for IT Review</fullName>
            </value>
            <value>
                <fullName>EDF Discussion Needed</fullName>
            </value>
            <value>
                <fullName>Ready for Heller Review</fullName>
            </value>
            <value>
                <fullName>Ready for EDF Approval</fullName>
            </value>
            <value>
                <fullName>Department Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>