force-app/main/default/objects/User_Story__c/fields/AW__c.field-meta.xml
<CustomField>
    <fullName>AW__c</fullName>
    <label>AW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>