force-app/main/default/objects/User_Story__c/fields/BP_Doc_Notes__c.field-meta.xml
<CustomField>
    <fullName>BP_Doc_Notes__c</fullName>
    <label>BP Doc Notes</label>
    <type>TextArea</type>
</CustomField>