force-app/main/default/objects/User_Story__c/fields/Build_Plan__c.field-meta.xml
<CustomField>
    <fullName>Build_Plan__c</fullName>
    <inlineHelpText>Documentation of all configuration changes related to this user story</inlineHelpText>
    <label>Build Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>