force-app/main/default/objects/User_Story__c/fields/Current_System__c.field-meta.xml
<CustomField>
    <fullName>Current_System__c</fullName>
    <inlineHelpText>Document the system or tool currently used for this user story if there is one</inlineHelpText>
    <label>Current System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>