force-app/main/default/objects/User_Story__c/fields/Current_System_Meets_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Current_System_Meets_Requirements__c</fullName>
    <label>Current System Meets Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Fully Meets</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Does Not Meet</label>
            </value>
            <value>
                <fullName>Partial</fullName>
                <label>Partially Meets</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>