force-app/main/default/objects/User_Story__c/fields/Data_Map_Impact__c.field-meta.xml
<CustomField>
    <fullName>Data_Map_Impact__c</fullName>
    <label>Data Map Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>