force-app/main/default/objects/User_Story__c/fields/Departmental_Team__c.field-meta.xml
<CustomField>
    <fullName>Departmental_Team__c</fullName>
    <label>Departmental Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Constituent</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>General Staff</fullName>
            </value>
            <value>
                <fullName>Programs</fullName>
            </value>
            <value>
                <fullName>Volunteers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>