force-app/main/default/objects/User_Story__c/fields/Dev_Finance_Review__c.field-meta.xml
<CustomField>
    <fullName>Dev_Finance_Review__c</fullName>
    <label>Dev- Finance Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>