force-app/main/default/objects/User_Story__c/fields/EDF_Impact_Additional_Priority__c.field-meta.xml
<CustomField>
    <fullName>EDF_Impact_Additional_Priority__c</fullName>
    <label>EDF Impact/Additional Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Executive &amp; Board Level Impact</fullName>
            </value>
            <value>
                <fullName>2 - Issues to review/fix with current process</fullName>
            </value>
            <value>
                <fullName>3 - Current functionality/process enhancements</fullName>
            </value>
            <value>
                <fullName>4 - New functionality/process - does not exist</fullName>
            </value>
            <value>
                <fullName>5 - Current functionality/process - no updates needed for launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>