force-app/main/default/objects/User_Story__c/fields/EDF_Roadmap_ID__c.field-meta.xml
<CustomField>
    <fullName>EDF_Roadmap_ID__c</fullName>
    <description>EDF Salesforce Product Roadmap ID</description>
    <inlineHelpText>EDF Salesforce Product Roadmap ID</inlineHelpText>
    <label>EDF Roadmap ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>