force-app/main/default/objects/User_Story__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <inlineHelpText>A way to group related user stories together</inlineHelpText>
    <label>Epic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acknowledgements</fullName>
            </value>
            <value>
                <fullName>Activity Data Points</fullName>
            </value>
            <value>
                <fullName>Activity Defaults &amp; Automation</fullName>
            </value>
            <value>
                <fullName>Activity Field Enhancements</fullName>
            </value>
            <value>
                <fullName>CDQ</fullName>
            </value>
            <value>
                <fullName>Classy</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
                <label>Climate Corps</label>
            </value>
            <value>
                <fullName>Constituent Management</fullName>
                <label>Constituencies</label>
            </value>
            <value>
                <fullName>Contact Information</fullName>
            </value>
            <value>
                <fullName>Development Opportunities</fullName>
            </value>
            <value>
                <fullName>System Administration</fullName>
                <label>Documentation</label>
            </value>
            <value>
                <fullName>Downstream Systems &amp; Integrations</fullName>
            </value>
            <value>
                <fullName>Duplicate Management</fullName>
            </value>
            <value>
                <fullName>Event Attendee Management</fullName>
            </value>
            <value>
                <fullName>Budget and Expense management</fullName>
                <label>Event Budget and Expense management</label>
            </value>
            <value>
                <fullName>Event Communications</fullName>
            </value>
            <value>
                <fullName>List Management</fullName>
                <label>Event List Management</label>
            </value>
            <value>
                <fullName>Event On-site Logistics</fullName>
            </value>
            <value>
                <fullName>Event Registration</fullName>
            </value>
            <value>
                <fullName>CRM Functionality</fullName>
                <label>Event-related CRM Functionality</label>
            </value>
            <value>
                <fullName>Event Reporting</fullName>
            </value>
            <value>
                <fullName>Salesforce Integration</fullName>
                <label>Event Salesforce Integration</label>
            </value>
            <value>
                <fullName>Events Calendar</fullName>
            </value>
            <value>
                <fullName>Event Session Management</fullName>
            </value>
            <value>
                <fullName>Event Setup</fullName>
            </value>
            <value>
                <fullName>Events Support and Training</fullName>
            </value>
            <value>
                <fullName>Event Venue Management</fullName>
            </value>
            <value>
                <fullName>Event Speaker Management</fullName>
                <label>Event Volunteer Management</label>
            </value>
            <value>
                <fullName>Email Tools &amp; Communication Preferences</fullName>
                <label>External Communication Tools</label>
            </value>
            <value>
                <fullName>Document Management</fullName>
                <label>File Management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>