force-app/main/default/objects/User_Story__c/fields/Gap_Scale__c.field-meta.xml
<CustomField>
    <fullName>Gap_Scale__c</fullName>
    <inlineHelpText>Assess the gap between the current system and the needs/requirements</inlineHelpText>
    <label>Gap Scale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>No Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>