force-app/main/default/objects/User_Story__c/fields/Implementation_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Complexity__c</fullName>
    <label>Implementation Complexity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>