force-app/main/default/objects/User_Story__c/fields/Included_in_BP_Doc__c.field-meta.xml
<CustomField>
    <fullName>Included_in_BP_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included in BP Doc</label>
    <type>Checkbox</type>
</CustomField>