force-app/main/default/objects/User_Story__c/fields/Membership_Review__c.field-meta.xml
<CustomField>
    <fullName>Membership_Review__c</fullName>
    <label>Membership Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>