force-app/main/default/objects/User_Story__c/fields/Move_to_Post_Launch_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Move_to_Post_Launch_Prioritization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Iteration 1 user story will need to be reprioritized for post launch development.</description>
    <inlineHelpText>Check if Iteration 1 user story will need to be reprioritized for post launch development.</inlineHelpText>
    <label>Move to Post Launch Prioritization</label>
    <type>Checkbox</type>
</CustomField>