force-app/main/default/objects/User_Story__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <inlineHelpText>The goal or reason behind the need expressed in the User Story Description.</inlineHelpText>
    <label>Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>