force-app/main/default/objects/User_Story__c/fields/OSI_Comments__c.field-meta.xml
<CustomField>
    <fullName>OSI_Comments__c</fullName>
    <label>OSI Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>