force-app/main/default/objects/User_Story__c/fields/OSI_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>OSI_Meeting_Notes__c</fullName>
    <label>OSI Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>