force-app/main/default/objects/User_Story__c/fields/Parent_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Parent_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to populate a parent User Story for stories that have common themes or are all related.</inlineHelpText>
    <label>Parent User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Child User Stories</relationshipLabel>
    <relationshipName>Child_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>