force-app/main/default/objects/User_Story__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M (Must)</fullName>
                <label>Must</label>
            </value>
            <value>
                <fullName>S (Should)</fullName>
                <label>Should</label>
            </value>
            <value>
                <fullName>C (Could)</fullName>
                <label>Could</label>
            </value>
            <value>
                <fullName>Omit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>