force-app/main/default/objects/User_Story__c/fields/Program_Review__c.field-meta.xml
<CustomField>
    <fullName>Program_Review__c</fullName>
    <label>Program Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>