force-app/main/default/objects/User_Story__c/fields/Related_Project_or_Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project_or_Sub_Project__c</fullName>
    <label>Related Project or Sub-Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital Marketing Roadmap</fullName>
            </value>
            <value>
                <fullName>Salesforce Cases</fullName>
            </value>
            <value>
                <fullName>SharePoint Migration</fullName>
            </value>
            <value>
                <fullName>Climate Corps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>