force-app/main/default/objects/User_Story__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <label>Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heller</fullName>
            </value>
            <value>
                <fullName>EDF</fullName>
            </value>
            <value>
                <fullName>OSI</fullName>
            </value>
            <value>
                <fullName>Allant</fullName>
            </value>
            <value>
                <fullName>Intricity</fullName>
            </value>
            <value>
                <fullName>Zuri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>