force-app/main/default/objects/User_Story__c/fields/Security_Needs__c.field-meta.xml
<CustomField>
    <fullName>Security_Needs__c</fullName>
    <inlineHelpText>Does this request and its solution have any security/access implications? Do we need to update user permissions?</inlineHelpText>
    <label>Security Needs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>