force-app/main/default/objects/User_Story__c/fields/Solution_Selection_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Solution_Selection_Requirement__c</fullName>
    <label>Solution Selection Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>