force-app/main/default/objects/User_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Refinement</fullName>
            </value>
            <value>
                <fullName>EDF Discussion Required</fullName>
            </value>
            <value>
                <fullName>Further Discussion Required</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Design in Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Build</fullName>
            </value>
            <value>
                <fullName>Build in Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Testing-Dev Sandbox</fullName>
            </value>
            <value>
                <fullName>Ready for Testing Full Sandbox</fullName>
                <label>Ready for Testing - Full Sandbox</label>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Deployed to Production</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>