force-app/main/default/objects/User_Story__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activity Tracking</fullName>
            </value>
            <value>
                <fullName>Climate Corps</fullName>
            </value>
            <value>
                <fullName>Communication Tools &amp; Consent</fullName>
                <label>Communication Tools, Consent, Preferences</label>
            </value>
            <value>
                <fullName>Contact Information</fullName>
                <isActive>false</isActive>
                <label>Contact Information</label>
            </value>
            <value>
                <fullName>Event Management</fullName>
            </value>
            <value>
                <fullName>Gift Processing &amp; Financials</fullName>
                <isActive>false</isActive>
                <label>Gift Processing &amp; Financials</label>
            </value>
            <value>
                <fullName>Downstream Systems &amp; Integrations</fullName>
                <label>Integrations &amp; Data</label>
            </value>
            <value>
                <fullName>Member Services</fullName>
            </value>
            <value>
                <fullName>Donation Management</fullName>
                <label>Opportunity Management</label>
            </value>
            <value>
                <fullName>Portfolio/Relationship Management</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
                <label>System Administration &amp; Documentation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>