force-app/main/default/objects/User_Story__c/fields/User_Story_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Description__c</fullName>
    <inlineHelpText>Detailed need/request of User Story. Include information such as the context for the request, what&apos;s the current process, what&apos;re the current pain points, what are your expectation for the solution, are there any timeline considerations?</inlineHelpText>
    <label>User Story Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>